<resources>
            <string name="app_name">ReadingDiary</string>
            <string name="home_screen_name">Home</string>
            <string name="home_title">Reading Diary</string>
            <string name="home_subtitle">Kingston Primary School</string>
            <string name="home_welcome">Hey there! /n Well done for all your reading! /n You\'re doing great! /n Would you like to:</string>
            <string name="home_view_reading_history">View Reading History</string>
            <string name="home_add_new_diary_entry">Add New Diary Entry</string>
            <string name="home_manage_users">Manage Users</string>
            <string name="home_dialog_create_users_title">No users found. Users are required to link the app to your household. Set up users now?</string>
            <string name="home_dialog_create_users_confirm">Confirm</string>
            <string name="home_dialog_create_users_cancel">Cancel</string>
            <string name="reading_history_screen_name">View Reading History</string>
            <string name="reading_history_search">Search…</string>
            <string name="reading_diary_dialog_delete_record_title">Are you sure you wish to delete this diary entry?</string>
            <string name="reading_diary_dialog_delete_record_confirm">Confirm</string>
            <string name="reading_diary_dialog_delete_record_cancel">Cancel</string>
            <string name="view_diary_entry_screen_name">View Diary Entry</string>
            <string name="view_diary_entry_time_spent_reading">hour</string>
            <string name="view_diary_entry_book_information_title">Book Information</string>
            <string name="view_diary_entry_book_information_book_title">Title</string>
            <string name="view_diary_entry_book_information_author_name">Author</string>
            <string name="view_diary_entry_page_information_title">Page Information</string>
            <string name="view_diary_entry_page_information_pages_read">Pages read</string>
            <string name="view_diary_entry_page_information_pages_read_pages">pages</string>
            <string name="view_diary_entry_page_information_pages_read_percentage_read">% read</string>
            <string name="view_diary_entry_child_comments_title">Child Comments</string>
            <string name="view_diary_entry_child_comments_enjoyment_rating">Enjoyment Rating</string>
            <string name="view_diary_entry_child_comments_additional_comments">Additional Comments</string>
            <string name="view_diary_entry_parent_comments_title">Parent Comments</string>
            <string name="view_diary_entry_parent_comments_reading_ability_rating">Reading Ability Rating</string>
            <string name="view_diary_entry_parent_comments_additional_comments">Additional Comments</string>
            <string name="view_diary_entry_teacher_comments_title">Teacher Comments</string>
            <string name="view_diary_entry_teacher_comments_reading_progress_rating">Reading Progress Rating</string>
            <string name="view_diary_entry_teacher_comments_additional_comments">Additional Comments</string>
            <string name="new_diary_entry_information_screen_name">Add New Diary Entry</string>
            <string name="new_diary_entry_information_reading_information_title">Reading Information</string>
            <string name="new_diary_entry_information_reading_information_start_date_time_title">Reading Start Date and Time</string>
            <string name="new_diary_entry_information_reading_information_start_date_time_help">Please select the date and time you started reading</string>
            <string name="new_diary_entry_information_reading_information_end_date_time_title">Reading End Date and Time</string>
            <string name="new_diary_entry_information_reading_information_end_date_time_help">Please select the date and time you finished reading</string>
            <string name="new_diary_entry_information_reading_information_time_spent_reading_information">Wow! You read for </string>
            <string name="new_diary_entry_information_reading_information_time_spent_reading_hours"> hours and </string>
            <string name="new_diary_entry_information_reading_information_time_spent_reading_minutes"> minutes. Well done!</string>
            <string name="new_diary_entry_information_book_information_title">Book Information</string>
            <string name="new_diary_entry_information_book_information_book_title_title">Book Title</string>
            <string name="new_diary_entry_information_book_information_book_title_help">Please enter the name of the book you read</string>
            <string name="new_diary_entry_information_book_information_author_name_title">Book Author</string>
            <string name="new_diary_entry_information_book_information_author_name_help">Please enter the name of the writer of the book you read</string>
            <string name="new_diary_entry_information_book_information_page_count_title">Page Count</string>
            <string name="new_diary_entry_information_book_information_page_count_help">Please enter the total number of pages of the book you read</string>
            <string name="new_diary_entry_information_page_information_title">Page Information</string>
            <string name="new_diary_entry_information_page_information_start_page_title">Start Page</string>
            <string name="new_diary_entry_information_page_information_start_page_help">Please enter the page number of the first page you read</string>
            <string name="new_diary_entry_information_page_information_end_page_title">End Page</string>
            <string name="new_diary_entry_information_page_information_end_page_help">Please enter the page number of the last page you read</string>
            <string name="new_diary_entry_information_page_information_pages_read_information">Wow! You read </string>
            <string name="new_diary_entry_information_page_information_pages_read_pages"> pages! You\'re doing great!</string>
            <string name="new_diary_entry_information_button_cancel">Cancel</string>
            <string name="new_diary_entry_information_button_next">Next</string>
            <string name="new_diary_entry_pupil_comments_screen_name">Add New Diary Entry - Pupil Comments</string>
            <string name="new_diary_entry_pupil_comments_title">Pupil Comments</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_title">Enjoyment Rating</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_help">Did you like this book? Tap on the stars to rate it</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_one_star_guide">One star means the book was boring and you wouldn\'t want to read it again</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_five_star_guide">Five stars means the book was really fun and you\'d love to read it again</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_happy_information">We\'re happy you liked the book - time to read some more!</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_neutral_information">We\'re glad the book was OK</string>
            <string name="new_diary_entry_pupil_comments_enjoyment_rating_sad_information">We\'re sad you didn\'t like the book. How about trying a different book next time?</string>
            <string name="new_diary_entry_pupil_comments_additional_comments_title">Comments</string>
            <string name="new_diary_entry_pupil_comments_additional_comments_help">Please tell us a bit more about the book</string>
            <string name="new_diary_entry_pupil_comments_additional_comments_sad_guide">What didn\'t you like about the book? /n Was there anything you liked about the book? /n Was it easy to read?</string>
            <string name="new_diary_entry_pupil_comments_additional_comments_neutral_guide">What did you like about the book? /n Was didn\'t you like about the book? /n Was it easy to read?</string>
            <string name="new_diary_entry_pupil_comments_additional_comments_happy_guide">What did you really like about the book? /n Was there anything you didn\'t like about the book? /n Was it easy to read?</string>
            <string name="new_diary_entry_pupil_comments_button_new_comment">Add Another Comment</string>
            <string name="new_diary_entry_pupil_comments_name_title">Your Name</string>
            <string name="new_diary_entry_pupil_comments_name_help">Please choose your name from the list</string>
            <string name="new_diary_entry_pupil_comments_button_cancel">Cancel</string>
            <string name="new_diary_entry_pupil_comments_button_next">Next</string>
            <string name="new_diary_entry_parent_comments_screen_name">Add New Diary Entry - Parent/Guardian Comments</string>
            <string name="new_diary_entry_parent_comments_title">Parent/Guardian Comments</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_title">Reading Ability Rating</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_help_name">Was </string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_help_advice"> a confident reader? Did you notice any struggles or lack of understanding when </string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_help_concluding_advice"> was reading?</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_one_star_guide_name">One star means </string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_one_star_guide_help"> struggled lots when reading, or didn\'t understand lots of the words or storyline</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_five_star_guide_name">Five stars means </string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_five_star_guide_help"> read the book with ease, and had no gaps in knowledge or understanding</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_happy_information">We\'re pleased you didn\'t notice any struggles - maybe the next book should be more challenging!</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_neutral_information">We\'re pleased you didn\'t notice any major difficulties - the book was at the right level</string>
            <string name="new_diary_entry_parent_comments_reading_ability_rating_sad_information">We\'re sad to hear you noticed lots of struggling - the next book should be less challenging</string>
            <string name="new_diary_entry_parent_comments_additional_comments_title">Comments</string>
            <string name="new_diary_entry_parent_comments_additional_comments_help_name">Please tell us a bit more about your experience of supervising  book</string>
            <string name="new_diary_entry_parent_comments_additional_comments_help_advice"> \'s reading journey</string>
            <string name="new_diary_entry_parent_comments_additional_comments_sad_guide">What struggles did you notice? /n Were there any words you had to explain the meaning of?</string>
            <string name="new_diary_entry_parent_comments_additional_comments_neutral_guide">What struggles did you notice? /n How frequent were these? Were there any words you had to explain the meaning of?</string>
            <string name="new_diary_entry_parent_comments_additional_comments_happy_guide">Do you think the book was not challenging enough?</string>
            <string name="new_diary_entry_parent_comments_button_cancel">Cancel</string>
            <string name="new_diary_entry_parent_comments_button_next">Next</string>
</resources>