<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDiaryEntryParentCommentsActivity"
    android:background="@drawable/background_image">

    <Button
        android:id="@+id/new_diary_entry_parent_comments_button_cancel"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/new_diary_entry_parent_comments_button_cancel"
        app:backgroundTint="#216EF3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_diary_entry_parent_comments_button_next"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/new_diary_entry_parent_comments_button_next"
        app:backgroundTint="#216EF3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toEndOf="@+id/new_diary_entry_parent_comments_button_cancel" />

    <ImageButton
        android:id="@+id/add_diary_entry_parent_comments_navigation_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/home_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/add_diary_entry_parent_comments_navigation_button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/home_view_reading_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_diary_entry_parent_comments_navigation_button_home"
        app:srcCompat="@drawable/list_icon" />

    <ImageButton
        android:id="@+id/add_diary_entry_parent_comments_navigation_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/new_diary_entry_information_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_diary_entry_parent_comments_navigation_button_history"
        app:srcCompat="@drawable/add_icon"
        app:tint="#216EF3" />

    <ImageButton
        android:id="@+id/add_diary_entry_parent_comments_navigation_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/settings_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_diary_entry_parent_comments_navigation_button_add"
        app:srcCompat="@drawable/settings_icon" />

    <TextView
        android:id="@+id/adddiaryentryparentcommentstitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Diary Entry Parent Comments Screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>