<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewReadingHistoryActivity"
    android:background="@drawable/background_image">

    <Button
        android:id="@+id/view_reading_history_button_view_entry"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="20dp"
        android:text="Dummy - View Entry"
        app:backgroundTint="#216EF3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/view_reading_history_navigation_button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/home_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/view_reading_history_navigation_button_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/home_view_reading_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_reading_history_navigation_button_home"
        app:srcCompat="@drawable/list_icon"
        app:tint="#216EF3" />

    <ImageButton
        android:id="@+id/view_reading_history_navigation_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/new_diary_entry_information_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_reading_history_navigation_button_history"
        app:srcCompat="@drawable/add_icon" />

    <ImageButton
        android:id="@+id/view_reading_history_navigation_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/settings_screen_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_reading_history_navigation_button_add"
        app:srcCompat="@drawable/settings_icon" />

    <TextView
        android:id="@+id/viewreadinghistorytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View Reading History Screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>